<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/personality_fragment_layout"
    android:background="@color/green_darkest"
    tools:context=".view.personality.PersonalityFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fetch_some_tweets_id"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:scrollHorizontally="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/result_label_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_some_tweets"
                android:text="@string/recent_100_tweets_can_be_fetched_by_entering_your_twitter_user_name_and_press_fetch_tweet_then_you_can_simply_check_personality_type" />

            <TextView
                android:id="@+id/introOfPage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/enter_your_twitter_username_and_check_personality_below"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/twitter_screen_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_personality" />

            <Button
                android:id="@+id/check_personality"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button"
                android:text="@string/check_personality"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toTopOf="@id/taketest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personality_classification_result_id"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/twitter_screen_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/enter_twitter_username"
                android:inputType="textPersonName"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/view_some_tweets"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/introOfPage"
                android:autofillHints="" />

            <Button
                android:id="@+id/view_some_tweets"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/fetch_tweets"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/fetch_some_tweets_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/twitter_screen_name"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/personality_classification_result_id"
                android:layout_width="96dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:textColor="@color/design_default_color_background"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/check_personality"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_label_text"
                android:text="@string/like_estp_0_enfj_0_isfj_0_intj_0_infj_0" />

            <TextView
                android:id="@+id/taketest"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="70dp"
                android:clickable="true"
                android:text="@string/hyperlink"
                android:textColor="@color/windowBackground"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/check_personality"
                android:focusable="true" />

            <TextView
                android:id="@+id/result_label_text"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/personality_classification_result_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fetch_some_tweets_id"
                android:text="@string/top_6_personality" />

            <TextView
                android:id="@+id/tv_title_personality"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="39dp"
                android:text="@string/check_your_personality"
                android:textColor="?android:attr/textColorHighlight"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/introOfPage"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="26dp"
                android:src="?android:attr/fingerprintAuthDrawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.805"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/finger_print_icon" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="86dp"
                android:layout_height="38dp"
                android:src="@android:drawable/btn_star_big_on"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_personality"
                android:contentDescription="@string/star" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="55dp"
                android:layout_height="38dp"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="108dp"
                android:src="@android:drawable/star_big_on"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_personality"
                android:contentDescription="@string/star" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="41dp"
                android:src="@android:drawable/btn_star_big_on"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_personality"
                android:contentDescription="@string/star" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>



